<resources>
    <string name="app_name">Meteo</string>
    <string name="name_of_the_city">Name of the city ?</string>
    <string name="hint_name_city">Paris,London,…</string>
    <string name="create_a_city">Create a city</string>
    <string name="cancel">Cancel</string>
    <string name="could_not_create_the_city">Could not create the city …</string>
    <string name="city_2">City 2</string>
    <string name="city_1">City 1</string>
    <string name="delete_city">Delete city</string>
    <string name="delete_city_title">"Do you really want to delete %1$s?"</string>
    <string name="city_has_deleted">"%1$s has been deleted"</string>
    <string name="city_not_deleted">"Could not delete the city %1$s"</string>
    <string name="city_not_load">"Could not load for city: %1$s"</string>
    <string name="city_load">"OpenWeatherMap Response : %1$s"</string>
    <string name="city">City</string>
    <string name="description">Description</string>
    <string name="temperature">Temperature</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="sunrise">Sunrise</string>
    <string name="temperature_city">"Temperature: %1$s °C"</string>
    <string name="pressure_city">"Pressure: %1$s hPa"</string>
    <string name="humidity_city">"Humidity : %1$s %%"</string>
    <string name="appwidget_text">City Name</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="_12_c">12°C</string>
</resources>