<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".meteo.MeteoActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/city"
            style="@style/TitreFontStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:text="@string/city"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/icon_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/city"
            app:layout_constraintLeft_toLeftOf="@+id/city"
            app:layout_constraintTop_toBottomOf="@+id/city" />

        <TextView
            android:id="@+id/description"
            style="@style/ValeurFontStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/description"
            app:layout_constraintBottom_toBottomOf="@id/icon_image"
            app:layout_constraintStart_toEndOf="@id/icon_image"
            app:layout_constraintTop_toTopOf="@id/icon_image" />

        <TextView
            android:id="@+id/temperature"
            style="@style/ValeurFontStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/temperature"
            app:layout_constraintLeft_toLeftOf="@id/icon_image"
            app:layout_constraintTop_toBottomOf="@id/icon_image" />

        <TextView
            android:id="@+id/pressure"
            style="@style/ValeurFontStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/pressure"
            app:layout_constraintLeft_toLeftOf="@id/temperature"
            app:layout_constraintTop_toBottomOf="@id/temperature" />

        <TextView
            android:id="@+id/humidity"
            style="@style/ValeurFontStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/humidity"
            app:layout_constraintLeft_toLeftOf="@id/pressure"
            app:layout_constraintTop_toBottomOf="@id/pressure" />


        <ImageView
            android:id="@+id/icon_sunrise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/sunrise"
            app:layout_constraintLeft_toLeftOf="@+id/humidity"
            app:layout_constraintTop_toBottomOf="@+id/humidity" />

        <TextView
            android:id="@+id/sunrise"
            style="@style/ValeurFontStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/sunrise"
            app:layout_constraintBottom_toBottomOf="@id/icon_sunrise"
            app:layout_constraintStart_toEndOf="@id/icon_sunrise"
            app:layout_constraintTop_toTopOf="@id/icon_sunrise" />

        <ImageView
            android:id="@+id/icon_sunset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/sunset"
            app:layout_constraintLeft_toLeftOf="@+id/icon_sunrise"
            app:layout_constraintTop_toBottomOf="@+id/icon_sunrise" />

        <TextView
            android:id="@+id/sunset"
            style="@style/ValeurFontStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="Sunset"
            app:layout_constraintBottom_toBottomOf="@id/icon_sunset"
            app:layout_constraintStart_toEndOf="@id/icon_sunset"
            app:layout_constraintTop_toTopOf="@id/icon_sunset" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>